# rust-ndarray-example

./: DESCRIPTION  NAMESPACE  example.R
R/: extendr-wrappers.R
src/: Makevars  Makevars.win  entrypoint.c  mymulti-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
