[package]
name = 'mymulti'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'mymulti'

[dependencies]
extendr-api = { version = '*', features = ["ndarray"] }
ndarray = { version = '*', features = ["matrixmultiply-threading"] }
ndarray-linalg = { version = '*', features = ["openblas-static"] }
ndarray-rand = '*' 
